objects/tffa__DisclosureParticipant__c.object
<CustomObject>
    <description>Captures the participants of the current disclosure document. Includes the parties which are identified as signers for the current document. Can include the signing users as well as per the business requirements around signing in branch.</description>
    <fields>
        <fullName>tffa__Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agent (or banker) acting as a participant</description>
        <label>Agent</label>
        <referenceTo>tffa__AgentDetail__c</referenceTo>
        <relationshipLabel>Disclosure Participants</relationshipLabel>
        <relationshipName>DisclosureParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Beneficiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Beneficiary whose disclosure is being captured.</description>
        <label>Beneficiary</label>
        <referenceTo>tffa__Beneficiary__c</referenceTo>
        <relationshipLabel>Disclosure Participants</relationshipLabel>
        <relationshipName>DisclosureParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceBrowser__c</fullName>
        <description>The browser of the client from which disclosure is signed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocation__c</fullName>
        <description>Specifies the precise geolocation of the device. A device&apos;s IP can be used to derive this value within some degree of confidence.</description>
        <label>Device Location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceOS__c</fullName>
        <description>The OS of the client from which disclosure was accepted</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceOrientation__c</fullName>
        <description>Orientation of the device captured while signing the disclosure</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Orientation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DevicePixelRatio__c</fullName>
        <description>Pixel ratio of the device from which disclosure is signed</description>
        <label>Device pixel ratio</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Device__c</fullName>
        <description>Identifier of the device from which disclosure is signed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Disclosure__c</fullName>
        <description>Reference to parent Disclosure object</description>
        <label>Disclosure</label>
        <referenceTo>tffa__Disclosure__c</referenceTo>
        <relationshipLabel>Disclosure Participants</relationshipLabel>
        <relationshipName>DisclosureParticipants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__IpAddress__c</fullName>
        <description>IP address of the device</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsAcceptanceRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if the acceptance is required by the participant on the current disclosure</description>
        <label>Is acceptance required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsSignatureRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if the signature is required by the participant on the current disclosure</description>
        <label>Is signature required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the party whose disclosure is being captured.</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Disclosure Participants</relationshipLabel>
        <relationshipName>DisclosureParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__RoleCode__c</fullName>
        <description>The applicant role with respect to this application</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Role code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RoleName__c</fullName>
        <description>Denormalized name field of applicant role.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Name</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__SignaturePointType__c</fullName>
        <description>Captures the type of Signature Point in Disclosure Participant for placing signing tabs</description>
        <label>Signature point type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SignaturePointType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SignaturePoint__c</fullName>
        <description>An object containing information about the specific signature point including the location, height, width, coordinates, and other data.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Signature point</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>Execution status of the disclosure participant</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of the disclosure participant</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DisclosureParticipantType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__UserAgent__c</fullName>
        <description>User agent of the device used while signing the disclosure.In computing, a user agent is software (a software agent) that is acting on behalf of a user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to related User.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Disclosure Participants</relationshipLabel>
        <relationshipName>DisclosureParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Disclosure Participant</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>DisclosureParticipant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disclosure Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>